# test_projcect

my_site/: .env  Dockerfile  Makefile  db.sqlite3  docker-compose.yml  gunicorn_conf.py  pyproject.toml
my_site/test_site/: authentication.py  handler.py  middleware.py  serializers.py  settings.py  tests.py  urls.py  views.py  wsgi.py
my_site/test_site/migrations/: 0001_initial.py
my_site/test_site/static/temp1/css/: login_style.css  reg_style.css  user_acc_style.css
my_site/test_site/templates/temp1/: error.html  index.html  login.html  reg.html  user_acc.html
